--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "dependencies": {
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "luxon": "^1.27.0",
     "node": "^16.3.0",
     "pg": "^8.6.0",
     "pg-copy-streams": "^5.1.1"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
