Defined get/put routes and wrote corresponding queries

--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "fs": "0.0.1-security",
     "luxon": "^1.27.0",
     "node": "^16.3.0",
+    "nodemon": "^2.0.7",
     "pg": "^8.6.0",
     "pg-copy-streams": "^5.1.1"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
