--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
   "dependencies": {
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "jest": "^27.0.5",
     "luxon": "^1.27.0",
     "node": "^16.3.0",
     "nodemon": "^2.0.7",
     "pg": "^8.6.0",
-    "pg-copy-streams": "^5.1.1"
+    "pg-copy-streams": "^5.1.1",
+    "supertest": "^6.1.3",
+    "v8": "^0.1.0"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "nodemon index.js"
   },
   "repository": {
