--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "fs": "0.0.1-security",
     "jest": "^27.0.5",
     "luxon": "^1.27.0",
+    "newrelic": "^7.5.1",
     "node": "^16.3.0",
     "nodemon": "^2.0.7",
     "pg": "^8.6.0",
@@ -18,7 +19,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "jest",
-    "start": "nodemon index.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
