--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "FEC-QA-API-Service",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "dependencies": {
     "express": "^4.17.1",
     "fs": "0.0.1-security",
